<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.tamerlanchik.robocar.Joystick
        android:id="@+id/graph"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:layout_marginEnd="8dp"
        app:axis_on="true"
        app:handle_color="@color/colorAccent"
        app:handle_radius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="83dp" />

    <Switch
        android:id="@+id/connectSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/connectedSwitch"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/checkCarConnectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/checkCarConnection"
        android:textAppearance="@android:style/TextAppearance"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/connectSwitch"
        app:layout_constraintTop_toBottomOf="@+id/connectSwitch" />

    <ToggleButton
        android:id="@+id/carConnectionStateButten"
        android:layout_width="47dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/Disconnected"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/checkCarConnectionLabel"
        app:layout_constraintStart_toEndOf="@+id/checkCarConnectionLabel"
        app:layout_constraintTop_toTopOf="@+id/checkCarConnectionLabel" />

    <CheckBox
        android:id="@+id/speedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:checked="true"
        android:text="Fast"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/connectSwitch"
        app:layout_constraintStart_toEndOf="@+id/connectSwitch"
        app:layout_constraintTop_toTopOf="@+id/connectSwitch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/log_recycle_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Gyro"
        app:layout_constraintStart_toStartOf="@+id/checkCarConnectionLabel"
        app:layout_constraintTop_toBottomOf="@+id/checkCarConnectionLabel" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Accel"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="174dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="X"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/gyroXTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="8dp"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@+id/graph"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/accelXTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingStart="8dp"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@+id/graph"
        app:layout_constraintStart_toStartOf="@+id/gyroZTextView"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/accelYTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingStart="8dp"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@+id/graph"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gyroZTextView"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <TextView
        android:id="@+id/accelZTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingStart="8dp"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@+id/graph"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gyroZTextView"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <TextView
        android:id="@+id/gyroYTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="8dp"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@+id/graph"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/gyroZTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="8dp"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@+id/graph"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Y"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Z"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Y"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Z"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

</android.support.constraint.ConstraintLayout>